<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SubstratesFragment">

    <RadioGroup
        android:id="@+id/map_type_radio_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:checkedButton="@id/scheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/scheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheme" />

        <RadioButton
            android:id="@+id/satellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/satellite" />

        <RadioButton
            android:id="@+id/hybrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hybrid" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>